discussion/kv_engine/181126/181126_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54087: Respond only once for RangeScan error conditions

KV is sending 2 mcbp response packets to the client if a continue
is "interrupted" by a fatal error.

* vbucket changes state (no longer scannable)
* collection is dropped
* scan is cancelled by range-scan-cancel

This issue only occurs if the RangeScan is actively scanning and
detects the error. The bug occurs as the RangeScanDataHandler first
encodes the error response and then stops/cancels the RangeScan. Next
the frontend executor re-runs (ewouldblock pattern) and triggers a
second response packet.

The fix here is to ensure that for the fatal errors, the
RangeScanDataHandler does not send a response and leaves the error
response upto the frontend executor, this also ensures that the cluster
map would be properly included for not-my-vbucket errors.

Change-Id: Id217c393da6808523bf5d65a81a34fbe973a55c0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-10-11 14:23:30.000000000
Message: 
Patch Set 3: Patch Set 2 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-11 15:05:48.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21055/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:97:45: error: reference to type "const CookieIface" could not bind to an rvalue of type "const CookieIface *" [clang-diagnostic-error]
    engine.setUnknownCollectionErrorContext(&cookie, manifestUid);
                                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.h:588:62: note: passing argument to parameter "cookie" here
    void setUnknownCollectionErrorContext(const CookieIface& cookie,
                                                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21055/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:97:45:
error: reference to type "const CookieIface" could not bind to an rvalue of type "const CookieIface *" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21055/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50217/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc(97): error C2664: "void EventuallyPersistentEngine::setUnknownCollectionErrorContext(const CookieIface &,uint64_t) const": cannot convert argument 1 from "const CookieIface *" to "const CookieIface &" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50217/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42145/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:97:45:
error: reference to type "const CookieIface" could not bind to an rvalue of type "const CookieIface *"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42145/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23463/ : FAILURE

Compile error at [2022-10-11T15:05:28.536Z] ../kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:97:45:
error: cannot convert ?const CookieIface*? to ?const CookieIface&?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23463/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24304/ : FAILURE

Compile error at [2022-10-11T15:04:17.166Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:97:45:
error: reference to type "const CookieIface" could not bind to an rvalue of type "const CookieIface *"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24304/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23067/ : FAILURE

Compile error at [2022-10-11T15:02:08.768Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:97:45:
error: cannot convert ?const CookieIface*? to ?const CookieIface&?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23067/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31482/ : FAILURE

Compile error at [2022-10-11T15:03:55.162Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:97:45:
error: reference to type "const CookieIface" could not bind to an rvalue of type "const CookieIface *"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31482/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10881/ : FAILURE

Compile error at [2022-10-11T14:27:47.363Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:97:45:
error: cannot convert ?const CookieIface*? to ?const CookieIface&?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10881/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22480/ : FAILURE

Compile error at [2022-10-11T14:32:13.747Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:97:45:
error: reference to type "const CookieIface" could not bind to an rvalue of type "const CookieIface *"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22480/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10785/ : FAILURE

Compile error at [2022-10-11T14:59:11.413Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:97:45:
error: reference to type "const CookieIface" could not bind to an rvalue of type "const CookieIface *"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10785/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20295/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2022-10-12 08:39:14.000000000
Message: 
Patch Set 3: Code-Review-2

(1 comment)
File Comment: /PATCHSET_LEVEL -> Could do with sharing the error code check using in testing
----------------------------------------------------------------------------------------------------------------------
